# Project_OOP

./: CMakeLists.txt  README.md  builder.cpp  builder.h  colectie.cpp  colectie.h  data_anuala.cpp  data_anuala.h  desen_builder.cpp  desen_builder.h  eroare_opera.cpp  eroare_opera.h  erori.cpp  erori.h  event_factory.cpp  event_factory.h  main.cpp  muzeu.cpp  muzeu.h  muzeu_temp.cpp  opera_arta.cpp  opera_arta.h  pictura.cpp  pictura.h  sculptura.cpp  sculptura.h
