cmake_minimum_required(VERSION 3.20)
project(Proiect_POO)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proiect_POO main.cpp opera_arta.cpp colectie.cpp muzeu.cpp pictura.cpp sculptura.cpp erori.cpp erori.h muzeu_temp.cpp desen_builder.cpp desen_builder.h event_factory.cpp event_factory.h data_anuala.cpp data_anuala.h)
